[gd_scene load_steps=5 format=1]

[ext_resource path="res://GDScripts/CanonFire.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Objects/CanonFire.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Effects/light2.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Objects/Smoke2.tscn" type="PackedScene" id=4]

[node name="Node2D" type="Node2D"]

transform/pos = Vector2( -2.83122e-07, -0.12851 )
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 9.53674e-07, -4.75496 )
texture = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="."]

transform/pos = Vector2( 0.651878, 2.95472 )
enabled = true
editor_only = false
texture = ExtResource( 3 )
offset = Vector2( 0, 0 )
scale = 1.0
color = Color( 1, 0.787598, 0.0625, 1 )
energy = 0.5
mode = 0
range/height = 0.0
range/z_min = -1024
range/z_max = 1024
range/layer_min = 0
range/layer_max = 0
range/item_mask = 1
shadow/enabled = false
shadow/color = Color( 0, 0, 0, 0 )
shadow/buffer_size = 2048
shadow/esm_multiplier = 80.0
shadow/item_mask = 1

[node name="flameDelay" type="Timer" parent="."]

process_mode = 1
wait_time = 4.0
one_shot = false
autostart = true

[node name="Spawn" type="Position2D" parent="."]

transform/pos = Vector2( 0.193734, 0.0355272 )

[node name="Smoke" parent="." instance=ExtResource( 4 )]

[node name="flameLife" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]

rect = Rect2( -10, -10, 20, 20 )
enabler/pause_animations = true
enabler/freeze_bodies = true
enabler/pause_particles = true
enabler/pause_animated_sprites = true
enabler/process_parent = true
enabler/fixed_process_parent = true

[connection signal="timeout" from="flameDelay" to="." method="_on_Delay_timeout"]

[connection signal="timeout" from="flameLife" to="." method="_on_flameLife_timeout"]


